# girlfriend-in-cli

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v0.1.5.0.md  RELEASE_NOTES_v0.1.6.0.md  pyproject.toml
.claude/: settings.local.json
.codex/: AGENTS.md  ralph-seed.yaml  ralph-status.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml  update-homebrew-tap.yml
.ouroboros/data/: interview_interview_20260408_112500.json
Formula/: girlfriend-in-cli.rb
docs/issues/: issue-11-creator-hub.md  issue-12-youtube-persona-generation.md  issue-21-desktop-overlay.md  issue-7-login-play-flow.md
personas/: PERSONA_FORMAT.md  dua-international.json  han-seo-jin-crush.json  lee-su-bin-bestfriend.json  mina-saju-cafe.json  reze-anime.json  wonyoung-idol.json  yandere-special.json  yu-na-girlfriend.json  장첸-auto.json
scenes/: cafe.json  convenience_store.json  home_doorstep.json  night_walk.json  park.json  restaurant.json
scripts/: bootstrap.sh  install.sh  ouroboros_capture_evidence.sh  ouroboros_ralph.sh  render_homebrew_formula.py  smoke.sh  smoke_remote.sh  test_input.py  update_release.sh
seeds/: scene-system.yaml
src/girlfriend_generator/: __init__.py  __main__.py  api.py  app.py  cli.py  companion_state.py  (+23 more)
tests/: test_api_e2e.py  test_app.py  test_cli.py  test_cli_remote.py  test_companion_state.py  test_context.py  test_engine.py  test_non_text_actions.py  test_ouroboros_support.py  test_paths.py  test_personas.py  test_photo.py  test_providers.py  test_random_chat_relay.py  test_read_receipts.py  test_remote.py  test_session_io.py  test_updater.py  test_usage_metrics.py  test_voice.py  test_youtube_ingest.py
(+2 files in other folders)
