[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "girlfriend-in-cli"
version = "0.1.3.1"
description = "Girlfriend in CLI — terminal romance simulator for vibe coding breaks."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = ["rich>=14,<15"]

[project.optional-dependencies]
llm = ["openai>=1.0.0", "anthropic>=0.40.0"]
personas = ["PyYAML>=6.0.0"]
dev = ["pytest>=9,<10"]

[project.scripts]
girlfriend-in-cli = "girlfriend_generator.cli:main"
girlfriend-generator = "girlfriend_generator.cli:main"
mygf = "girlfriend_generator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
girlfriend_generator = ["assets/personas/*.json"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
